<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Baby Sleep Sounds</string>
    <string name="description">Select sound and click play</string>
    <string name="sound">Sound</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ok">OK</string>

    <string name="sleepTimer">Sleep Timer</string>
    <string name="disabled">Disabled</string>
    <string name="time_1minute">1 Minute</string>
    <string name="time_5minute">5 Minutes</string>
    <string name="time_10minute">10 Minutes</string>
    <string name="time_30minute">30 Minutes</string>
    <string name="time_1hour">1 Hour</string>
    <string name="time_2hour">2 Hours</string>
    <string name="time_4hour">4 Hours</string>
    <string name="time_8hour">8 Hours</string>

    <string name="campfire">Campfire</string>
    <string name="dryer">Dryer</string>
    <string name="fan">Fan</string>
    <string name="ocean">Ocean</string>
    <string name="rain">Rain</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="shhhh">Shhhh</string>
    <string name="shower">Shower</string>
    <string name="stream">Stream</string>
    <string name="vacuum">Vacuum</string>
    <string name="water">Water</string>
    <string name="waterfall">Waterfall</string>
    <string name="waves">Waves</string>
    <string name="whiteNoise">White Noise</string>

    <string name="preparing">Preparing&#8230;</string>
    <string name="enableLowPassFilter">Low Pass Filter</string>
    <string name="filterCutoff">Filter cutoff</string>
    <string name="filterCutoffValue"><xliff:g id="frequency">%d</xliff:g> Hz</string>
    <string name="playbackNotSupported">Playback now supported, see logs for details</string>
    <string name="playbackFailure">Unable to play file, see logs for details</string>
    <string name="sleepTimerUpdated">Updated sleep timer</string>

    <string name="theme">Theme</string>

    <string name="notificationPlaying">Playing&#8230;</string>

    <string name="notificationChannelName">Baby Sleep Sounds Audio Service</string>

    <string name="about">About</string>
    <string name="app_copyright_fmt">Copyright 2016-<xliff:g>%d</xliff:g> Branden Archer</string>
    <string name="app_license">Licensed under the GPLv3.</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="debug_version_fmt">Version: <xliff:g id="version">%s</xliff:g></string>
    <string name="app_revision_fmt">Revision Information: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="sound_resources"><xliff:g id="app_name">%s</xliff:g> uses sound resources from: <xliff:g id="sound_sources_list">%s</xliff:g></string>
    <string name="image_resources"><xliff:g id="app_name">%s</xliff:g> uses image resources from: <xliff:g id="sound_sources_list">%s</xliff:g></string>
    <string name="app_libraries"><xliff:g id="app_name">%s</xliff:g> uses the following third-party libraries or programs: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="customize">Customize</string>
    <string name="settings">Settings</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
</resources>
