<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="protect.babysleepsounds.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20.0dip"
        android:layout_marginStart="20.0dip"
        android:layout_marginEnd="20.0dip"
        android:text="@string/description"
        android:textSize="16.0sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sound_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintStart_toStartOf="parent"
        android:labelFor="@+id/budgetSpinner"
        android:layout_marginTop="20.0dip"
        android:layout_marginStart="20.0dip"
        android:layout_marginEnd="20.0dip"
        android:text="@string/sound"
        android:textSize="16.0sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/soundSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/sound_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sound_label"
        app:layout_constraintBottom_toBottomOf="@id/sound_label"
        android:drawSelectorOnTop="true" />

    <TextView
        android:id="@+id/sleep_timer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sound_label"
        app:layout_constraintStart_toStartOf="parent"
        android:labelFor="@+id/sleepTimerSpinner"
        android:layout_marginTop="20.0dip"
        android:layout_marginStart="20.0dip"
        android:layout_marginEnd="20.0dip"
        android:text="@string/sleepTimer"
        android:textSize="16.0sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sleepTimerSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/sleep_timer_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sleep_timer_label"
        app:layout_constraintBottom_toBottomOf="@id/sleep_timer_label"
        android:drawSelectorOnTop="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20.0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sleep_timer_label"
        android:enabled="false"
        android:text="@string/play" />

</androidx.constraintlayout.widget.ConstraintLayout>
